--- a/Task 1. Calculator/index.html
+++ b/Task 1. Calculator/index.html
@@ -18,7 +18,7 @@
             <button class="btn btn-delete" data-action="delete">⌫</button>
             <button class="btn btn-operator" data-action="operator" data-operator="÷">÷</button>
             
-            
+            <button class="btn btn-number" data-number="7">7</button>
             <button class="btn btn-number" data-number="8">8</button>
             <button class="btn btn-number" data-number="9">9</button>
             <button class="btn btn-operator" data-action="operator" data-operator="×">×</button>
