--- a/Task 2. E-Commerce Website/index.html
+++ b/Task 2. E-Commerce Website/index.html
@@ -22,6 +22,12 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <div class="search-bar">
+    <input type="text" placeholder="Search products..." id="searchInput">
+    <button id="searchBtn"><i class="fas fa-search"></i></button>
+</div>
+
+
             <div class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-count">0</span>
@@ -57,6 +63,7 @@
                 <!-- Products will be loaded dynamically from JavaScript -->
             </div>
         </div>
+
     </section>
 
     <!-- Shopping Cart Sidebar -->
