--- a/Task 2. E-Commerce Website/index.html
+++ b/Task 2. E-Commerce Website/index.html
@@ -42,7 +42,7 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-               
+                <h2>Welcome to ShopEasy</h2>
                 <p>Discover amazing products at unbeatable prices</p>
                 <a href="#products" class="btn">Shop Now</a>
             </div>
