--- a/Task 3. To-Do List/index.html
+++ b/Task 3. To-Do List/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
             <h1><i class="fas fa-tasks"></i> Task Manager</h1>
-            
+            <p class="subtitle">Stay organized and productive</p>
         </header>
 
         <div class="todo-container">
