--- a/Task 4. Connect Four Game/index.html
+++ b/Task 4. Connect Four Game/index.html
@@ -13,7 +13,7 @@
             <h1>Connect Four</h1>
             <div class="game-info">
                 <div id="player-turn">
-                    
+                    <span class="player-red">Player 1</span>'s Turn
                 </div>
                 <button id="restart-btn"><i class="fas fa-redo"></i> Restart Game</button>
             </div>
