--- a/Task 4. Connect Four Game/index.html
+++ b/Task 4. Connect Four Game/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-           
+            <h1>Connect Four</h1>
             <div class="game-info">
                 <div id="player-turn">
                     <span class="player-red">Player 1</span>'s Turn
